--- a/quest-app/src/index.css
+++ b/quest-app/src/index.css
@@ -1,6 +1,8 @@
 @import "tailwindcss/preflight";
 @import "tailwindcss/utilities";
 @import "tailwindcss/base";
+@import 'leaflet/dist/leaflet.css';
+
 
 
 
